@@ -13,6 +13,9 @@
 	_populateParser outside of the overridden method.
 	(F8_NetworkData.__init__):  Pass noipv4 and noipv6 to superclass.
 
+	* pykickstart/commands/raid.py (F7_Raid):  Call superclass's
+	__init__method.
+
 2007-09-03  Jeremy Katz  <katzj@redhat.com>
 
 	* pykickstart.spec, setup.py: New version.
